Disable `Varifier` and improve examples